--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,15 +1,24 @@
 # Application
 DEBUG=true
-SECRET_KEY=your-secret-key-here
+SECRET_KEY=your-secret-key-here-change-in-production
 
-# Database
-DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/g2e
+# Database (Supabase PostgreSQL)
+# Get this from: Supabase Dashboard → Settings → Database → Connection string → URI
+# Use the "Transaction" pooler connection for serverless (Cloud Run)
+DATABASE_URL=postgresql+asyncpg://postgres.[project-ref]:[password]@aws-0-us-east-1.pooler.supabase.com:6543/postgres
 
-# Redis
-REDIS_URL=redis://localhost:6379/0
+# Redis (optional - for caching)
+# Options: Upstash (free tier), Redis Cloud, or leave empty to disable
+REDIS_URL=
 
-# Google Gemini
+# Google Gemini AI
+# Get from: https://makersuite.google.com/app/apikey
 GEMINI_API_KEY=your-gemini-api-key
+
+# JWT Settings
+JWT_SECRET=your-jwt-secret-change-in-production
+JWT_ALGORITHM=HS256
+JWT_EXPIRATION_HOURS=24
 
 # E*TRADE (get from developer.etrade.com)
 ETRADE_CONSUMER_KEY=
@@ -21,6 +30,8 @@ ALPACA_CLIENT_ID=
 ALPACA_CLIENT_SECRET=
 ALPACA_PAPER=true
 
-# Schwab (get from developer.schwab.com)
-SCHWAB_CLIENT_ID=
-SCHWAB_CLIENT_SECRET=
+# Frontend URL (for CORS)
+FRONTEND_URL=http://localhost:3000
+
+# Environment
+ENVIRONMENT=development
